# dataset-tools

./: .deny.toml  .typos.toml  Cargo.toml  README.md
.github/workflows/: ci.yaml
crates/datashed/: Cargo.toml
crates/datashed/src/: config.rs  datashed.rs  document.rs  error.rs  lib.rs
crates/datashed/tests/data/: dnb.txt  tib.txt  zbw.txt
crates/datashed/tests/it/: index.rs  init.rs  main.rs  prelude.rs  version.rs
datashed/: Cargo.toml
datashed/tests/: it.rs
