[workspace]
members = ["crates/datashed"]
resolver = "3"

[workspace.package]
authors = ["Nico Wagner <n.wagner@dnb.de>"]
rust-version = "1.87"
license = "EUPL-1.2"
edition = "2024"

[workspace.dependencies]
anyhow = { version = "1.0" }
assert_cmd = { version = "2.0" }
assert_fs = { version = "1.1" }
clap = { version = "4.5", features = ["derive","wrap_help","env","cargo"] }
predicates = { version = "3.1" }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml_edit = { version = "0.22", features = ["serde"] }
